--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -84,7 +84,7 @@
                 <span class="sr-only">Next</span>
               </a>
             </div>
-          <div class="container d-flex pt-3">
+          <div class="container container-descricao d-flex pt-3">
             <img src="imagens/home/logo-phirson.png" alt="Logo Phirson Pets" class="conteudoPrincipal-logo">
             <div class="d-flex flex-column">
               <h1 class="descricao-titulo">Breve Descrição</h1>
@@ -98,10 +98,10 @@
 
 <footer class="page-footer font-small d-flex justify-content-end flex-column">
   <div class="container">
-    <div class="text-center position-absolute container-logo">
+    <div class="container-logo">
       <img src="imagens/home/logo-phirson.png" alt="Logo Phirson Pets" class="rodapePrincipal-logo">
     </div>
-        <form class="rodapePrincipal-newsletter-form float-right">
+        <form class="rodapePrincipal-newsletter-form">
               <fieldset>
                 <legend class="rodapePrincipal-newsletter-form-legend" for="email-contato">FIQUE POR DENTRO</legend>
                   <div class="rodapePrincipal-newsletter-form-fieldset">
