--- a/resources/html/perfil-cliente.html
+++ b/resources/html/perfil-cliente.html
@@ -42,12 +42,65 @@
                   <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cliente">
                   <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cliente">
                 </div>
+
+                <div class="container-icone-adicionar-pet">
+                  <img src="imagens/user/perfil-cliente/icone-adicionar-pets.svg" alt="Flecha Descer" class="icone-adicionar-pets">
+                </div>
                 <div class="container-pets">
                   <div class="row">
                     <div class="col-md-auto">
                       <div class="container-flechas">
                         <img src="imagens/user/perfil-cliente/icone-editar-pets.svg" alt="Flecha Subir" class="icone-editar-pets">
-                        <img src="imagens/user/perfil-cliente/icone-adicionar-pets.svg" alt="Flecha Descer" class="icone-adicionar-pets">
+                      </div>
+                    </div>
+                    <div class="col-md-auto">
+                      <div class="container-imagem-perfil-cachorro">
+                        <img src="imagens/user/perfil-cliente/imagem-perfil-cachorro.jpg" alt="Imagem de Perfil" class="imagem-perfil-cachorro rounded-circle">
+                      </div>
+                    </div>
+                    <div class="col-md-auto">
+                      <h5 class="nome-pet">Athos</h5>
+                      <div class="container-tier-cachorro">
+                        <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
+                        <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
+                        <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
+                        <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
+                        <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
+                      </div>
+                      <h5 class="raca-pet">Labrador</h5>
+                      <h5 class="sexo-pet">Macho</h5>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-auto">
+                      <div class="container-flechas">
+                        <img src="imagens/user/perfil-cliente/icone-editar-pets.svg" alt="Flecha Subir" class="icone-editar-pets">
+                      </div>
+                    </div>
+                    <div class="col-md-auto">
+                      <div class="container-imagem-perfil-cachorro">
+                        <img src="imagens/user/perfil-cliente/imagem-perfil-cachorro.jpg" alt="Imagem de Perfil" class="imagem-perfil-cachorro rounded-circle">
+                      </div>
+                    </div>
+                    <div class="col-md-auto">
+                      <h5 class="nome-pet">Athos</h5>
+                      <div class="container-tier-cachorro">
+                        <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
+                        <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
+                        <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
+                        <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
+                        <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
+                      </div>
+                      <h5 class="raca-pet">Labrador</h5>
+                      <h5 class="sexo-pet">Macho</h5>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-auto">
+                      <div class="container-flechas">
+                        <img src="imagens/user/perfil-cliente/icone-editar-pets.svg" alt="Flecha Subir" class="icone-editar-pets">
                       </div>
                     </div>
                     <div class="col-md-auto">
@@ -69,8 +122,9 @@
                     </div>
                   </div>
                 </div>
+
               </div>
-              <div class="col-6">
+              <div class="container-descricao col-6">
                 <h1 class="text-descricao-cliente">Breve Descrição</h1>
                   <p class="descricao-cliente">Lorem Ipsum is simply dummy text of the printing and typesetting
                      industry. Lorem Ipsum has been the industry's standard dummy text
@@ -89,7 +143,7 @@
                             <img src="imagens/user/perfil-cliente/imagem-perfil-cuidador.jpg" alt="Imagem de Perfil" class="imagem-perfil-cuidador rounded-circle">
                           </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-7">
                           <h5 class="nome-cuidador">Beatriz da Silva</h5>
                           <div class="container-button-avaliar-cuidador rounded-pill">
                             <button type="submit" name="Avaliar Cuidador" class=" btn btn-sm button-avaliar-cuidador">Avaliar Cuidador</button>
@@ -105,7 +159,7 @@
                             <img src="imagens/user/perfil-cliente/imagem-perfil-cuidador.jpg" alt="Imagem de Perfil" class="imagem-perfil-cuidador rounded-circle">
                           </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-7">
                           <h5 class="nome-cuidador">Beatriz da Silva</h5>
                           <div class="container-button-avaliar-cuidador rounded-pill">
                             <button type="submit" name="Avaliar Cuidador" class=" btn btn-sm button-avaliar-cuidador">Avaliar Cuidador</button>
@@ -121,7 +175,7 @@
                             <img src="imagens/user/perfil-cliente/imagem-perfil-cuidador.jpg" alt="Imagem de Perfil" class="imagem-perfil-cuidador rounded-circle">
                           </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-7">
                           <h5 class="nome-cuidador">Beatriz da Silva</h5>
                           <div class="container-button-avaliar-cuidador rounded-pill">
                             <button type="submit" name="Avaliar Cuidador" class=" btn btn-sm button-avaliar-cuidador">Avaliar Cuidador</button>
@@ -137,7 +191,7 @@
                             <img src="imagens/user/perfil-cliente/imagem-perfil-cuidador.jpg" alt="Imagem de Perfil" class="imagem-perfil-cuidador rounded-circle">
                           </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-7">
                           <h5 class="nome-cuidador">Beatriz da Silva</h5>
                           <div class="container-button-avaliar-cuidador rounded-pill">
                             <button type="submit" name="Avaliar Cuidador" class=" btn btn-sm button-avaliar-cuidador">Avaliar Cuidador</button>
@@ -154,7 +208,7 @@
           </div>
       </main>
 
-<footer class="page-footer font-small d-flex justify-content-end flex-column fixed-bottom">
+<footer class="page-footer font-small d-flex justify-content-end flex-column">
   <div class="container">
     <div class="text-center position-absolute container-logo">
       <img src="imagens/home/logo-phirson.png" alt="Logo Phirson Pets" class="rodapePrincipal-logo">
