--- a/resources/html/tela-login.html
+++ b/resources/html/tela-login.html
@@ -30,7 +30,7 @@
       </header>
 
       <main>
-        <div class="container d-flex align-items-start">
+        <div class="container-form d-flex align-items-start">
           <form class="form-login d-flex align-items-start justify-content-center flex-column" action="#">
             <h1 class="text-login">Acesse sua Conta</h1>
             <label for="login" class="label-login">Login</label>
