--- a/resources/html/cadastra-pets.html
+++ b/resources/html/cadastra-pets.html
@@ -4,15 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Phirson Pets</title>
-<link rel="stylesheet" href="/style.css">
-
-
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-	integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-	crossorigin="anonymous">
-<link rel="stylesheet" href="css/home/style.css">
-<link rel="stylesheet" href="css/user/editar-pet.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"	integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"	crossorigin="anonymous">
+	<link rel="stylesheet" href="css/home/style.css">
+	<link rel="stylesheet" href="css/user/cadastra-pets.css">
 </head>
 
 <header>
@@ -80,23 +74,28 @@
 			</div>
 		</form>
 	</div>
+
+	<footer class="page-footer font-small d-flex justify-content-end flex-column">
+	  <div class="container">
+	    <div class="text-center position-absolute container-logo">
+	      <img src="imagens/home/logo-phirson.png" alt="Logo Phirson Pets" class="rodapePrincipal-logo">
+	    </div>
+	        <form class="rodapePrincipal-newsletter-form float-right">
+	              <fieldset>
+	                <legend class="rodapePrincipal-newsletter-form-legend" for="email-contato">FIQUE POR DENTRO</legend>
+	                  <div class="rodapePrincipal-newsletter-form-fieldset">
+	                    <input class="rodapePrincipal-newsletter-form-email-input" type="email" name="email-contato" id="email-contato">
+	                      <button class="rodapePrincipal-newsletter-form-button" type="submit">Assinar Nossa Newsletter<img src="imagens/home/icon-email.svg" alt="Icone Newsletter" class="icone-email"></button>
+	                  </div>
+	                  <img src="imagens/home/icon-instagram.svg" alt="Icone Instagram" class="icone-instagram">
+	              </fieldset>
+	             </form>
+	      </div>
+	</footer>
+
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 
-<footer class="page-footer font-small d-flex justify-content-end flex-column">
-  <div class="container">
-    <div class="text-center position-absolute container-logo">
-      <img src="imagens/home/logo-phirson.png" alt="Logo Phirson Pets" class="rodapePrincipal-logo">
-    </div>
-        <form class="rodapePrincipal-newsletter-form float-right">
-              <fieldset>
-                <legend class="rodapePrincipal-newsletter-form-legend" for="email-contato">FIQUE POR DENTRO</legend>
-                  <div class="rodapePrincipal-newsletter-form-fieldset">
-                    <input class="rodapePrincipal-newsletter-form-email-input" type="email" name="email-contato" id="email-contato">
-                      <button class="rodapePrincipal-newsletter-form-button" type="submit">Assinar Nossa Newsletter<img src="imagens/home/icon-email.svg" alt="Icone Newsletter" class="icone-email"></button>
-                  </div>
-                  <img src="imagens/home/icon-instagram.svg" alt="Icone Instagram" class="icone-instagram">
-              </fieldset>
-             </form>
-      </div>
-</footer>
 </html>
