--- a/resources/html/novo-perfil-cuidador.html
+++ b/resources/html/novo-perfil-cuidador.html
@@ -79,7 +79,7 @@
 
                 <h1 class="text-servicos">Serviços</h1>
                   <div class="container-text-area">
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+                    <textarea class="text-area form-control" id="exampleFormControlTextarea1" rows="5" cols="40"></textarea>
                   </div>
                   <div class="container-input-celular form-group mx-sm-3 d-flex">
                     <img src="imagens/user/perfil-cuidador/icone-whatsapp-rosa.svg" alt="Icone Whatsapp" class="icone-celular">
