--- a/resources/html/editar-pet.html
+++ b/resources/html/editar-pet.html
@@ -86,6 +86,11 @@
 			<div class="container-button-finalizar">
 				<button type="submit" class="finalizar rounded-pill">Finalizar</button>
 			</div>
+
+			<div class="container-button-excluir-pet">
+				<button type="submit" class="excluir-pet rounded-pill">Excluir Pet</button>
+			</div>
+
 			<div>
 				<input type="hidden" name="_csrf" value="a3f9034f-7e6d-43a3-b57b-9af6cc8f4529" />
 			</div>
