--- a/resources/html/perfil-cliente.html
+++ b/resources/html/perfil-cliente.html
@@ -46,6 +46,7 @@
                 <div class="container-icone-adicionar-pet">
                   <img src="imagens/user/perfil-cliente/icone-adicionar-pets.svg" alt="Flecha Descer" class="icone-adicionar-pets">
                 </div>
+
                 <div class="container-pets">
                   <div class="row">
                     <div class="col-md-auto">
@@ -125,13 +126,29 @@
 
               </div>
               <div class="container-descricao col-6">
-                <h1 class="text-descricao-cliente">Breve Descrição</h1>
-                  <p class="descricao-cliente">Lorem Ipsum is simply dummy text of the printing and typesetting
-                     industry. Lorem Ipsum has been the industry's standard dummy text
-                     ever since the 1500s, when an unknown printer took a galley of
-                     type and scrambled it to make a type specimen book.
+                <h5 class="text-endereco">Endereço</h5>
+                  <p class="endereco">Rua Aaaaaaaaaaaaaaaaaaaaaaa, 999
                   </p>
-                <h5 class="celular"><img src="imagens/user/perfil-cliente/icone-whatsapp-rosa.svg" alt="Icone Whatsapp" class="icone-celular">(11) 99999-9999</h5>
+
+                <h5 class="text-cpf">CPF</h5>
+                  <p class="cpf">000.000.000-00
+                  </p>
+
+                <h5 class="text-email">E-mail</h5>
+                  <p class="email">aaaaaaaaaaaaaaa@hotmail.com
+                  </p>
+
+                <h5 class="text-genero">Gênero</h5>
+                  <p class="genero">Masculino
+                  </p>
+
+                <h5 class="text-ecuidador">É Cuidador?</h5>
+                  <p class="ecuidador">Sim
+                  </p>
+
+                <p class="celular"><img src="imagens/user/perfil-cliente/icone-whatsapp-rosa.svg" alt="Icone Whatsapp" class="icone-celular">(11) 99999-9999</p>
+
+                <a class="link-editar-perfil"href="#">Editar</a>
               </div>
               <div class="col">
                 <div class="container-historico-cuidadores">
