--- a/resources/html/cadastra-pets.html
+++ b/resources/html/cadastra-pets.html
@@ -58,6 +58,17 @@
 				<input id="raca" class="raca" name="raca" type="text" value=""/>
 			</div>
 
+			<div class="container-tipoAnimal d-flex flex-column">
+				<label class="text-tipoAnimal">Tipo Animal</label>
+				<select id="tipoAnimal" class="tipoAnimal" name="tipoAnimal">
+					<option value="CACHORRO">CACHORRO</option>
+					<option value="GATO">GATO</option>
+					<option value="PASSARO">PASSARO</option>
+					<option value="PEIXE">PEIXE</option>
+					<option value="EXOTICO">EXOTICO</option>
+				</select>
+			</div>
+
 			<div class="container-genero d-flex flex-column">
 				<label class="text-genero">Sexo</label>
 				<select id="genero" class="genero" name="genero">
