--- a/resources/html/editar-pet.html
+++ b/resources/html/editar-pet.html
@@ -65,7 +65,7 @@
 			</div>
 
 			<div class="container-tipoAnimal d-flex flex-column">
-				<label class="text-tipoAnimal">Especie</label>
+				<label class="text-tipoAnimal">Tipo Animal</label>
 				<select id="tipoAnimal" class="tipoAnimal" name="tipoAnimal">
 					<option value="CACHORRO">CACHORRO</option>
 					<option value="GATO">GATO</option>
