--- a/resources/html/perfil-cliente.html
+++ b/resources/html/perfil-cliente.html
@@ -68,6 +68,7 @@
                         <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
                         <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
                       </div>
+                      <h5 class="tipo-pet">Cachorro</h5>
                       <h5 class="raca-pet">Labrador</h5>
                       <h5 class="sexo-pet">Macho</h5>
                     </div>
@@ -93,6 +94,7 @@
                         <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
                         <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
                       </div>
+                      <h5 class="tipo-pet">Cachorro</h5>
                       <h5 class="raca-pet">Labrador</h5>
                       <h5 class="sexo-pet">Macho</h5>
                     </div>
@@ -118,6 +120,7 @@
                         <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
                         <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
                       </div>
+                      <h5 class="tipo-pet">Cachorro</h5>
                       <h5 class="raca-pet">Labrador</h5>
                       <h5 class="sexo-pet">Macho</h5>
                     </div>
