--- a/resources/html/tela-login.html
+++ b/resources/html/tela-login.html
@@ -30,7 +30,9 @@
       </header>
 
       <main>
-        <div class="container-form d-flex align-items-start">
+        <div class="container d-flex align-items-start">
+          <div class="row">
+            <div class="col">
           <form class="form-login d-flex align-items-start justify-content-center flex-column" action="#">
             <h1 class="text-login">Acesse sua Conta</h1>
             <label for="login" class="label-login">Login</label>
@@ -40,29 +42,35 @@
   				  <input name="senha" type="password" id="senha" class="input-login" required placeholder="********">
 
             <div class="container-button-login">
-              <button type="submit" name="Entrar" class="button-entrar">Entrar<img src="imagens/home/tela-login/icone-login.svg" alt="Icone Login" class="icone-login"></button>
+              <button type="submit" name="Entrar" class="button-entrar">Entrar</button>
             </div>
 
             <div class="container-imagem-cachorro1">
               <img src="imagens/home/tela-login/cachorro1.png" alt="Imagem Cachorro1" class="imagem-cachorro1">
             </div>
 
-            <div class="division-line"></div>
+
+          </div>
+
+          <div class="division-line"></div>
 
           </form>
 
+            <div class="col">
           <div class="container-cadastrese d-flex align-items-start justify-content-center flex-column">
             <h1 class="text-cadastrese">Novo na Phirson?</h1>
 
             <div class="container-button-cadastrese">
-              <button type="submit" name="Entrar" class="button-cadastrese">Cadastre-se<img src="imagens/home/tela-login/icone-cadastrese.svg" alt="Icone Cadastre-se" class="icone-cadastrese"></button>
+              <button type="submit" name="Entrar" class="button-cadastrese">Cadastre-se</button>
             </div>
 
+            <img src="imagens/home/tela-login/cachorro2.png" alt="Imagem Cachorro2" class="imagem-cachorro2">
             <div class="container-imagem-cachorro2">
-              <img src="imagens/home/tela-login/cachorro2.png" alt="Imagem Cachorro2" class="imagem-cachorro2">
             </div>
 
           </div>
+        </div>
+        </div>
         </div>
       </main>
 
